developers credit added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <!-- Welcome to CASHe learnings -->
         <!-- ---------------------------- -->
 
-        <h1 id='welcome-heading'>Welcome to CASHe learnings</h1>
+        <h1 id='welcome-heading'>
+            Welcome to CASHe learnings
+        </h1>
 
         <!-- ==========================================================================-->
 
@@ -176,6 +178,9 @@
         <object id="display" height="95%" width="95%" data="https://www.youtube.com/embed/Pl7XP8o7v6g"></object>
     </div>
 
+    <p id="developers_credit">
+        Developed by Kamalesh Shiva Kumar, Priyanka Bhatnagar and Rohit Gopal
+    </p>
         <!-- ======================================================================= -->
     <div ng-show="displayQuizPages==true" id="display-quiz-pages">
 
