working on cashelearnings.js for business.html page adding ng lcass selected

--- a/homepage.html
+++ b/homepage.html
@@ -28,14 +28,14 @@
             </p>
         </div>
         
-        <div style="position : absolute; top : 22%;left : 25%">
+        <div class="tiles-alignment">
             <div class="business">
                 <img id='business-image' src="images/business.jpg" />
                 <div class="business-text">
                     <h2>Business</h2>
                     <p>This is the section that's purely for business team</p>
                 </div>
-                <a class="more" target="_blank" href="index.html">MORE</a>
+                <a class="more" target="_blank" href="business.html">MORE</a>
             </div>
 
             <div class="tech">
@@ -44,7 +44,16 @@
                     <h2>Tech</h2>
                     <p>This is the section that's purely for technology team</p>
                 </div>
-                <a class="more" target="_blank" href="index.html">MORE</a>
+                <a class="more" target="_blank" href="tech.html">MORE</a>
+            </div>
+
+            <div class="quiz-section">
+                <img id='quiz-image' src="images/quiz.png" />
+                <div class="quiz-text">
+                    <h2>Quiz</h2>
+                    <p>This is the section for attempting Quizzes</p>
+                </div>
+                <a class="more" target="_blank" href="quiz.html">MORE</a>
             </div>
         </div>
 
