--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <script src="https://s3.ap-south-1.amazonaws.com/learnings.cashe.co.in/js/angular.min.js"></script>
         <script src="https://s3.ap-south-1.amazonaws.com/learnings.cashe.co.in/js/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
-        <link rel="shortcut icon" href="#">
+        <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
+        <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+
     </head>
 
     <body ng-app="casheLearningsApp" ng-controller="quizController">
