index page downloaded from the bucket

--- a/homepage.html
+++ b/homepage.html
@@ -23,8 +23,8 @@
             <h1>
                 Welcome to CASHe Learning Portal
             </h1>
-            <p>
-                This is a learning portal for all the new joinees
+            <p align="center">
+                This is a learning portal for CASHe team
             </p>
         </div>
         
