--- a/tech.html
+++ b/tech.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Business</title>
+        <title>Technology</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="https://s3.ap-south-1.amazonaws.com/learnings.cashe.co.in/css/casheLearnings.css"> -->
         <script src="https://s3.ap-south-1.amazonaws.com/learnings.cashe.co.in/js/angular.min.js"></script>
@@ -16,7 +16,7 @@
 
     <body ng-app="casheLearningsApp" ng-controller="quizController">
         <h1 id='welcome-heading'>
-            Business
+            Technology
         </h1>
 
         <div class="business-topics-list">
